@@ -6,7 +6,6 @@ package org.chromium.chrome.browser.compositor.overlays.strip;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
@@ -36,6 +35,7 @@ import static org.chromium.ui.listmenu.ListMenuItemProperties.TITLE_ID;
 import static org.chromium.ui.listmenu.ListMenuSubmenuItemProperties.SUBMENU_PROVIDER;
 import static org.chromium.ui.listmenu.ListSectionDividerProperties.COLOR_ID;
 
+import android.annotation.StringRes;
 import android.app.Activity;
 import android.graphics.Rect;
 import android.graphics.drawable.GradientDrawable;
@@ -64,6 +64,7 @@ import org.chromium.base.supplier.SettableNonNullObservableSupplier;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.base.test.RobolectricUtil;
 import org.chromium.base.test.util.Feature;
+import org.chromium.base.test.util.Features.DisableFeatures;
 import org.chromium.base.test.util.Features.EnableFeatures;
 import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.R;
@@ -89,7 +90,7 @@ import org.chromium.chrome.browser.tabmodel.SupportedProfileType;
 import org.chromium.chrome.browser.tabmodel.TabClosingSource;
 import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabCreator;
-import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter.MergeNotificationType;
+import org.chromium.chrome.browser.tabmodel.TabGroupMergeNotificationType;
 import org.chromium.chrome.browser.tabmodel.TabGroupUtils.TabGroupCreationCallback;
 import org.chromium.chrome.browser.tabmodel.TabList;
 import org.chromium.chrome.browser.tabmodel.TabModel;
@@ -110,6 +111,7 @@ import org.chromium.components.tab_group_sync.SavedTabGroup;
 import org.chromium.components.tab_group_sync.SavedTabGroupTab;
 import org.chromium.components.tab_group_sync.TabGroupSyncService;
 import org.chromium.components.tab_groups.TabGroupColorPickerUtils;
+import org.chromium.components.tab_groups.TabGroupsFeatureMap;
 import org.chromium.content_public.browser.LoadUrlParams;
 import org.chromium.content_public.browser.WebContents;
 import org.chromium.ui.KeyboardVisibilityDelegate;
@@ -137,6 +139,7 @@ import java.util.function.BiConsumer;
     ChromeFeatureList.MEDIA_INDICATORS_ANDROID,
     ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS
 })
+@DisableFeatures({TabGroupsFeatureMap.UPDATE_TAB_GROUP_COLORS})
 public class TabContextMenuCoordinatorUnitTest {
     private static final int TAB_ID = 1;
     private static final int TAB_OUTSIDE_OF_GROUP_ID = 2;
@@ -365,44 +368,36 @@ public class TabContextMenuCoordinatorUnitTest {
     }
 
     @Test
-    @Feature("Tab Strip Context Menu")
-    public void testAddToNewTabGroup() {
-        mOnItemClickedCallback.onClick(
-                R.id.add_to_new_tab_group,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                COLLABORATION_ID,
-                /* listViewTouchTracker= */ null);
-        verify(mTabModel, times(1)).createSingleTabGroup(mTab1);
-        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    @SuppressWarnings("DirectInvocationOnMock")
+    public void testAnchorWidth() {
+        StripLayoutContextMenuCoordinatorTestUtils.testAnchorWidth(
+                mWeakReferenceActivity, mTabContextMenuCoordinator::getMenuWidth);
     }
 
     @Test
-    @Feature("Tab Strip Context Menu")
-    public void testAddToNewTabGroup_multipleTabs() {
-        mOnItemClickedCallback.onClick(
-                R.id.add_to_new_tab_group,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                COLLABORATION_ID,
-                /* listViewTouchTracker= */ null);
-        verify(mTabModel, times(1))
-                .mergeListOfTabsToGroup(
-                        eq(List.of(mTab1, mTab2)),
-                        eq(mTab1),
-                        eq(MergeNotificationType.NOTIFY_IF_NOT_NEW_GROUP));
-        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    public void testAnchor_offset() {
+        StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset(
+                (rectProvider) ->
+                        mTabContextMenuCoordinator.showMenu(
+                                rectProvider,
+                                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID))),
+                mTabContextMenuCoordinator::destroyMenuForTesting);
     }
 
     @Test
-    @Feature("Tab Strip Context Menu")
-    public void testListMenuItems_hasNewTabToTheRight() {
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        assertEquals(
-                R.id.new_tab_to_the_right_menu_id,
-                modelList.get(0).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    public void testAnchor_offset_incognito() {
+        setupWithIncognito(/* incognito= */ true);
+        StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset_incognito(
+                (rectProvider) ->
+                        mTabContextMenuCoordinator.showMenu(
+                                rectProvider,
+                                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID))),
+                mTabContextMenuCoordinator::destroyMenuForTesting);
     }
+
+    // --------------------------------------------------------------//
+    // ------------------ MENU ITEM ORDER TESTS ---------------------//
+    // --------------------------------------------------------------//
 
     @Test
     @Feature("Tab Strip Context Menu")
@@ -671,47 +666,6 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals(R.string.close, modelList.get(7).model.get(ListMenuItemProperties.TITLE_ID));
         assertEquals(
                 R.id.close_tab, modelList.get(7).model.get(ListMenuItemProperties.MENU_ITEM_ID));
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @SuppressWarnings("DirectInvocationOnMock")
-    public void testAddToGroupSubmenu_fallbackTabGroupName() {
-        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
-        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
-        MultiWindowUtils.setInstanceCountForTesting(1);
-        mSavedTabGroup.title = "";
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList,
-                new AnchorInfo(
-                        TAB_OUTSIDE_OF_GROUP_ID,
-                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-
-        assertEquals("Number of items in the list menu is incorrect", 10, modelList.size());
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(
-                modelList, "1 tab", 1, /* isIncognito= */ false);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @SuppressWarnings("DirectInvocationOnMock")
-    public void testAddToGroupSubmenu_fallbackTabGroupName_incognito() {
-        setupWithIncognito(true);
-        initializeCoordinator();
-        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
-        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
-        MultiWindowUtils.setInstanceCountForTesting(1);
-        mSavedTabGroup.title = "";
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList,
-                new AnchorInfo(
-                        TAB_OUTSIDE_OF_GROUP_ID,
-                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-
-        assertEquals("Number of items in the list menu is incorrect", 10, modelList.size());
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1, /* isIncognito= */ true);
     }
 
     @Test
@@ -1618,265 +1572,6 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    public void testRemoveFromGroup() {
-        mOnItemClickedCallback.onClick(
-                R.id.remove_from_tab_group,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                COLLABORATION_ID,
-                /* listViewTouchTracker= */ null);
-        verify(mTabUngrouper, times(1)).ungroupTabs(Collections.singletonList(mTab1), true, true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testShareUrl() {
-        mOnItemClickedCallback.onClick(
-                R.id.share_tab,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                COLLABORATION_ID,
-                /* listViewTouchTracker= */ null);
-        verify(mShareDelegate, times(1)).share(mTab1, false, TAB_STRIP_CONTEXT_MENU);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseTab_nullListViewTouchTracker() {
-        testCloseTab(/* listViewTouchTracker= */ null, /* shouldAllowUndo= */ true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseTab_clickWithTouch() {
-        long downMotionTime = SystemClock.uptimeMillis();
-        FakeListViewTouchTracker listViewTouchTracker = new FakeListViewTouchTracker();
-        listViewTouchTracker.setLastSingleTapUpInfo(
-                MotionEventTestUtils.createTouchMotionInfo(
-                        downMotionTime,
-                        /* eventTime= */ downMotionTime + 50,
-                        MotionEvent.ACTION_UP));
-
-        testCloseTab(listViewTouchTracker, /* shouldAllowUndo= */ true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseTab_clickWithMouse() {
-        long downMotionTime = SystemClock.uptimeMillis();
-        FakeListViewTouchTracker listViewTouchTracker = new FakeListViewTouchTracker();
-        listViewTouchTracker.setLastSingleTapUpInfo(
-                MotionEventTestUtils.createMouseMotionInfo(
-                        downMotionTime,
-                        /* eventTime= */ downMotionTime + 50,
-                        MotionEvent.ACTION_UP));
-
-        testCloseTab(listViewTouchTracker, /* shouldAllowUndo= */ false);
-    }
-
-    private void testCloseTab(
-            @Nullable ListViewTouchTracker listViewTouchTracker, boolean shouldAllowUndo) {
-        mOnItemClickedCallback.onClick(
-                R.id.close_tab,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                COLLABORATION_ID,
-                listViewTouchTracker);
-        verify(mTabRemover, times(1))
-                .closeTabs(
-                        TabClosureParams.closeTabs(Collections.singletonList(mTab1))
-                                .allowUndo(shouldAllowUndo)
-                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
-                                .build(),
-                        /* allowDialog= */ true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveToNewWindow() {
-        var modelList = new ModelList();
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                TabModel.INVALID_TAB_INDEX,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList,
-                new AnchorInfo(
-                        TAB_OUTSIDE_OF_GROUP_ID,
-                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToNewWindow(
-                modelList,
-                2,
-                mOnItemClickedCallback,
-                new AnchorInfo(TAB_OUTSIDE_OF_GROUP_ID, List.of(TAB_OUTSIDE_OF_GROUP_ID)),
-                COLLABORATION_ID);
-        verify(mMultiInstanceOrchestrator)
-                .moveTabsToOtherWindow(
-                        Collections.singletonList(mTabOutsideOfGroup), NewWindowAppSource.MENU);
-        verify(mMultiInstanceManager).closeChromeWindowIfEmpty(INSTANCE_ID_1);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveToWindow() {
-        MultiWindowUtils.setInstanceCountForTesting(2);
-        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
-                .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
-        var modelList = new ModelList();
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                TabModel.INVALID_TAB_INDEX,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList,
-                new AnchorInfo(
-                        TAB_OUTSIDE_OF_GROUP_ID,
-                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-
-        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToWindowRow(
-                modelList, 2, WINDOW_TITLE_2, mView);
-
-        verify(mMultiInstanceOrchestrator)
-                .moveTabsToWindowByIdChecked(
-                        INSTANCE_ID_2,
-                        Collections.singletonList(mTabOutsideOfGroup),
-                        /* destTabIndex= */ TabList.INVALID_TAB_INDEX,
-                        /* destGroupTabId= */ TabList.INVALID_TAB_INDEX,
-                        /* bringToFront= */ true);
-        verify(mMultiInstanceManager).closeChromeWindowIfEmpty(INSTANCE_ID_1);
-    }
-
-    @Test
-    @SuppressWarnings("DirectInvocationOnMock")
-    public void testAnchorWidth() {
-        StripLayoutContextMenuCoordinatorTestUtils.testAnchorWidth(
-                mWeakReferenceActivity, mTabContextMenuCoordinator::getMenuWidth);
-    }
-
-    @Test
-    public void testAnchor_offset() {
-        StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset(
-                (rectProvider) ->
-                        mTabContextMenuCoordinator.showMenu(
-                                rectProvider,
-                                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID))),
-                mTabContextMenuCoordinator::destroyMenuForTesting);
-    }
-
-    @Test
-    public void testAnchor_offset_incognito() {
-        setupWithIncognito(/* incognito= */ true);
-        StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset_incognito(
-                (rectProvider) ->
-                        mTabContextMenuCoordinator.showMenu(
-                                rectProvider,
-                                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID))),
-                mTabContextMenuCoordinator::destroyMenuForTesting);
-    }
-
-    @Test
-    public void testMuteSite_singleTab() {
-        when(mTabModel.isMuted(mTab1)).thenReturn(false);
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID)));
-
-        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
-        assertNotNull(muteItem);
-        assertEquals(
-                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 1),
-                muteItem.model.get(TITLE));
-
-        mOnItemClickedCallback.onClick(
-                R.id.mute_site_menu_id, new AnchorInfo(TAB_ID, List.of(TAB_ID)), null, null);
-        verify(mTabModel).setMuteSetting(List.of(mTab1), true);
-    }
-
-    @Test
-    public void testUnmuteSite_singleTab() {
-        when(mTabModel.isMuted(mTab1)).thenReturn(true);
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID)));
-
-        ListItem unmuteItem = findItemByMenuId(modelList, R.id.unmute_site_menu_id);
-        assertNotNull(unmuteItem);
-        assertEquals(
-                mActivity.getResources().getQuantityString(R.plurals.unmute_sites_menu_item, 1),
-                unmuteItem.model.get(TITLE));
-
-        mOnItemClickedCallback.onClick(
-                R.id.unmute_site_menu_id, new AnchorInfo(TAB_ID, List.of(TAB_ID)), null, null);
-        verify(mTabModel).setMuteSetting(List.of(mTab1), false);
-    }
-
-    @Test
-    public void testMuteSite_multipleTabs() {
-        when(mTabModel.isMuted(mTab1)).thenReturn(false);
-        when(mTabModel.isMuted(mTab2)).thenReturn(false);
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
-
-        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
-        assertNotNull(muteItem);
-        assertEquals(
-                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 2),
-                muteItem.model.get(TITLE));
-
-        mOnItemClickedCallback.onClick(
-                R.id.mute_site_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                null,
-                null);
-        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), true);
-    }
-
-    @Test
-    public void testUnmuteSite_multipleTabs() {
-        when(mTabModel.isMuted(mTab1)).thenReturn(true);
-        when(mTabModel.isMuted(mTab2)).thenReturn(true);
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
-
-        ListItem unmuteItem = findItemByMenuId(modelList, R.id.unmute_site_menu_id);
-        assertNotNull(unmuteItem);
-        assertEquals(
-                mActivity.getResources().getQuantityString(R.plurals.unmute_sites_menu_item, 2),
-                unmuteItem.model.get(TITLE));
-
-        mOnItemClickedCallback.onClick(
-                R.id.unmute_site_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                null,
-                null);
-        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), false);
-    }
-
-    @Test
-    public void testMuteSite_multipleTabs_mixedState() {
-        when(mTabModel.isMuted(mTab1)).thenReturn(true);
-        when(mTabModel.isMuted(mTab2)).thenReturn(false);
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
-
-        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
-        assertNotNull(muteItem);
-        assertEquals(
-                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 2),
-                muteItem.model.get(TITLE));
-
-        mOnItemClickedCallback.onClick(
-                R.id.mute_site_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                null,
-                null);
-        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
     public void testMoveToWindow_NonEmptyCustomWindowTitle() {
         final InstanceInfo emptyTitleInstance =
                 new InstanceInfo(
@@ -2058,152 +1753,6 @@ public class TabContextMenuCoordinatorUnitTest {
                 mActivity);
     }
 
-    private @Nullable ListItem findItemByMenuId(ModelList modelList, int menuId) {
-        for (int i = 0; i < modelList.size(); i++) {
-            ListItem item = modelList.get(i);
-            if (item.type == MENU_ITEM) {
-                if (item.model.get(ListMenuItemProperties.MENU_ITEM_ID) == menuId) {
-                    return item;
-                }
-            }
-        }
-        return null;
-    }
-
-    private void verifyAddToGroupSubmenuForTabOutsideOfGroup(
-            ModelList modelList,
-            String expectedTabGroupName,
-            int expectedTabCount,
-            boolean isIncognito) {
-        int modelListSizeBeforeNav = modelList.size();
-        var addToGroupItem = modelList.get(1);
-        assertTrue("Expected 'Add to group' item to be enabled", addToGroupItem.model.get(ENABLED));
-        var subMenu = addToGroupItem.model.get(SUBMENU_PROVIDER).get();
-        assertNotNull("Submenu should be present", subMenu);
-        assertEquals(
-                "Submenu should have 2 items, but was " + getDebugString(subMenu),
-                2,
-                subMenu.size());
-        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals(
-                "Expected 3 items to be displayed, but was " + getDebugString(modelList),
-                3,
-                modelList.size());
-        ListItem headerItem = modelList.get(0);
-        assertEquals(
-                "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
-        assertEquals(
-                "Expected submenu back header to have the same text as submenu parent item",
-                mActivity
-                        .getResources()
-                        .getQuantityString(R.plurals.add_tab_to_group_menu_item, expectedTabCount),
-                headerItem.model.get(TITLE));
-        assertTrue("Expected back header to be enabled", headerItem.model.get(ENABLED));
-        assertEquals(
-                "Expected 2nd submenu item to have MENU_ITEM type",
-                MENU_ITEM,
-                modelList.get(1).type);
-        assertEquals(
-                "Expected 2nd submenu item to be New Group",
-                R.string.create_new_group_row_title,
-                modelList.get(1).model.get(TITLE_ID));
-        assertTrue("Expected New Group item to be enabled", modelList.get(1).model.get(ENABLED));
-        assertEquals(
-                "Expected 3rd submenu child to have MENU_ITEM type",
-                MENU_ITEM,
-                modelList.get(2).type);
-        PropertyModel tabGroupRowModel = modelList.get(2).model;
-        assertEquals(
-                "Expected 3rd submenu child to contain the tab group identifier",
-                expectedTabGroupName,
-                tabGroupRowModel.get(TITLE));
-        assertEquals(
-                "Expected 3rd submenu child to have correct icon width",
-                mActivity
-                        .getResources()
-                        .getDimensionPixelSize(R.dimen.tab_group_nested_menu_color_icon_size),
-                tabGroupRowModel.get(START_ICON_WIDTH));
-        InsetDrawable insetDrawable = (InsetDrawable) tabGroupRowModel.get(START_ICON_DRAWABLE);
-        GradientDrawable drawable = (GradientDrawable) insetDrawable.getDrawable();
-        assertEquals(
-                "Expected circle to have correct color",
-                TabGroupColorPickerUtils.getTabGroupColorPickerItemColor(
-                        mActivity, TAB_GROUP_INDICATOR_COLOR_ID, isIncognito),
-                drawable.getColor().getDefaultColor());
-        assertTrue("Expected tab group row to be enabled", tabGroupRowModel.get(ENABLED));
-        headerItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals(
-                "Expected to navigate back to parent menu",
-                modelListSizeBeforeNav,
-                modelList.size());
-    }
-
-    private static String getDebugString(ModelList modelList) {
-        StringBuilder modelListContents = new StringBuilder();
-        for (int i = 0; i < modelList.size(); i++) {
-            modelListContents.append(modelList.get(i).type);
-            modelListContents.append(" ");
-            modelListContents.append(
-                    PropertyModel.getFromModelOrDefault(modelList.get(i).model, TITLE, null));
-            if (i < modelList.size() - 1) modelListContents.append(", ");
-        }
-        return modelListContents.toString();
-    }
-
-    private static String getDebugString(List<ListItem> items) {
-        StringBuilder modelListContents = new StringBuilder();
-        for (int i = 0; i < items.size(); i++) {
-            modelListContents.append(items.get(i).type);
-            modelListContents.append(" ");
-            modelListContents.append(
-                    PropertyModel.getFromModelOrDefault(items.get(i).model, TITLE, null));
-            if (i < items.size() - 1) modelListContents.append(", ");
-        }
-        return modelListContents.toString();
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testSubmenuSelection() {
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList,
-                new AnchorInfo(
-                        TAB_OUTSIDE_OF_GROUP_ID,
-                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-        mTabContextMenuCoordinator.showMenu(
-                new RectProvider(new Rect(0, 0, 100, 100)),
-                new AnchorInfo(TAB_ID, List.of(TAB_ID)));
-
-        // Click into "Add to group" submenu.
-        var addToGroupItem = modelList.get(1);
-        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-
-        RobolectricUtil.runAllBackgroundAndUi();
-        // Verify that the top item of the submenu is selected.
-        ListView listView =
-                mTabContextMenuCoordinator
-                        .getContentViewForTesting()
-                        .findViewById(R.id.tab_group_action_menu_list);
-        assertEquals(
-                "Expected 1st item to be selected after navigating into submenu",
-                0,
-                listView.getSelectedItemPosition());
-
-        // Click back to parent menu.
-        var headerItem = modelList.get(0);
-        headerItem.model.get(CLICK_LISTENER).onClick(mView);
-        RobolectricUtil.runAllBackgroundAndUi();
-
-        // Verify that the top item of the parent menu is selected.
-        assertEquals(
-                "Expected 1st item to be selected after navigating out of submenu",
-                0,
-                listView.getSelectedItemPosition());
-
-        mTabContextMenuCoordinator.destroyMenuForTesting();
-    }
-
     @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures({
@@ -2224,17 +1773,6 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    public void testDuplicateTab_singleTab() {
-        mOnItemClickedCallback.onClick(
-                R.id.duplicate_tab_menu_id,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-        verify(mTabModel, times(1)).duplicateTab(mTab1);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
     @EnableFeatures({
         ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
     })
@@ -2249,61 +1787,6 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals(
                 mActivity.getResources().getString(R.string.duplicate_tab_menu_item),
                 duplicateItem.model.get(ListMenuItemProperties.TITLE));
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testDuplicateTabs_multipleTabs() {
-        doReturn(null).when(mTabModel).duplicateTab(any());
-        mOnItemClickedCallback.onClick(
-                R.id.duplicate_tab_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-        verify(mTabModel, times(1)).duplicateTab(mTab1);
-        verify(mTabModel, times(1)).duplicateTab(mTab2);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
-    })
-    public void testListMenuItems_singleTab_closeOtherTabs_featureEnabled() {
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        ListItem closeOtherItem = findItemByMenuId(modelList, R.id.close_other_tabs_menu_id);
-        assertNull(closeOtherItem);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseOtherTabs_singleTab() {
-        mTabModel.addTab(
-                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                -1,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-
-        mOnItemClickedCallback.onClick(
-                R.id.close_other_tabs_menu_id,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-
-        verify(mTabRemover)
-                .closeTabs(
-                        TabClosureParams.closeTabs(List.of(mTab2, mTabOutsideOfGroup))
-                                .hideTabGroups(true)
-                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
-                                .build(),
-                        /* allowDialog= */ true);
     }
 
     @Test
@@ -2336,92 +1819,6 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures({
         ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
     })
-    public void testListMenuItems_singleTab_closeTabsToTheRight_lastTab() {
-        mTabModel.addTab(
-                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        assertNull(findItemByMenuId(modelList, R.id.close_tabs_to_the_right_menu_id));
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseTabsToTheRight_singleTab() {
-        mTabModel.addTab(
-                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                -1,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-
-        mOnItemClickedCallback.onClick(
-                R.id.close_tabs_to_the_right_menu_id,
-                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-
-        verify(mTabRemover)
-                .closeTabs(
-                        TabClosureParams.closeTabs(List.of(mTab2, mTabOutsideOfGroup))
-                                .hideTabGroups(true)
-                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
-                                .build(),
-                        /* allowDialog= */ true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
-    })
-    public void testListMenuItems_multipleTabs_closeOtherTabs_featureEnabled() {
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
-
-        ListItem closeOtherItem = findItemByMenuId(modelList, R.id.close_other_tabs_menu_id);
-        assertNull(closeOtherItem);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseOtherTabs_multipleTabs() {
-        mTabModel.addTab(
-                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                -1,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-
-        mOnItemClickedCallback.onClick(
-                R.id.close_other_tabs_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-
-        verify(mTabRemover)
-                .closeTabs(
-                        TabClosureParams.closeTabs(List.of(mTabOutsideOfGroup))
-                                .hideTabGroups(true)
-                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
-                                .build(),
-                        /* allowDialog= */ true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
-    })
     public void testListMenuItems_multipleTabs_closeTabsToTheRight_featureEnabled() {
         mTabModel.addTab(
                 mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
@@ -2442,34 +1839,6 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals(
                 mActivity.getResources().getString(R.string.close_tabs_to_the_right_menu_item),
                 closeRightItem.model.get(ListMenuItemProperties.TITLE));
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testCloseTabsToTheRight_multipleTabs() {
-        mTabModel.addTab(
-                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
-        mTabModel.addTab(
-                mTabOutsideOfGroup,
-                -1,
-                TabLaunchType.FROM_CHROME_UI,
-                TabCreationState.LIVE_IN_FOREGROUND);
-
-        mOnItemClickedCallback.onClick(
-                R.id.close_tabs_to_the_right_menu_id,
-                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
-                /* collaborationId= */ null,
-                /* listViewTouchTracker= */ null);
-
-        verify(mTabRemover)
-                .closeTabs(
-                        TabClosureParams.closeTabs(List.of(mTabOutsideOfGroup))
-                                .hideTabGroups(true)
-                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
-                                .build(),
-                        /* allowDialog= */ true);
     }
 
     @Test
@@ -2533,78 +1902,6 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    public void testMoveTabLeft() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        modelList.get(3).model.get(CLICK_LISTENER).onClick(mView);
-
-        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabLeft_firstTab() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(0);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Did not expect any item to have 'Move left' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabRight() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        modelList.get(4).model.get(CLICK_LISTENER).onClick(mView);
-
-        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), false);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabRight_lastTab() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(2);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Did not expect any item to have 'Move right' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
     public void testListMenuItems_moveTabItems_incognito() {
         setupWithIncognito(/* incognito= */ true);
         initializeCoordinator();
@@ -2651,152 +1948,6 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    public void testMoveTabStart_RTL() {
-        LocalizationUtils.setRtlForTesting(true);
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        // In RTL, the item to move toward the start is visually "Move right". It's at the same
-        // position as "Move left" in LTR.
-        modelList.get(3).model.get(CLICK_LISTENER).onClick(mView);
-        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), false);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabStart_firstTab_RTL() {
-        LocalizationUtils.setRtlForTesting(true);
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(0);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        // In RTL, moving toward the start is "Move right". This option should not be available for
-        // the first tab.
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Did not expect any item to have 'Move right' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabEnd_RTL() {
-        LocalizationUtils.setRtlForTesting(true);
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        // In RTL, the item to move toward the end is visually "Move left". It's at the same
-        // position as "Move right" in LTR.
-        modelList.get(4).model.get(CLICK_LISTENER).onClick(mView);
-
-        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabEnd_lastTab_RTL() {
-        LocalizationUtils.setRtlForTesting(true);
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(2);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        // In RTL, moving toward the end is "Move left". This option should not be available for
-        // the last tab.
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Did not expect any item to have 'Move left' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabLeft_firstUnpinnedTab() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(1);
-        when(mTabModel.findFirstNonPinnedTabIndex()).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Expected no 'Move left' title if tab to the left is pinned",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabRight_pinnedTab() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTab1.getIsPinned()).thenReturn(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(0);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        for (ListItem listItem : modelList) {
-            if (!listItem.model.containsKey(TITLE)) continue;
-            assertNotEquals(
-                    "Did not expect pinned tab menu to have 'Move left' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1),
-                    listItem.model.get(TITLE));
-            assertNotEquals(
-                    "Did not expect pinned tab menu to have 'Move right' title",
-                    mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1),
-                    listItem.model.get(TITLE));
-        }
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    public void testMoveTabLeft_unpinnedTab() {
-        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
-        when(mTabModel.indexOf(mTab1)).thenReturn(2);
-        when(mTabModel.findFirstNonPinnedTabIndex()).thenReturn(1);
-        when(mTabModel.getCount()).thenReturn(3);
-
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        modelList.get(3).model.get(CLICK_LISTENER).onClick(mView);
-
-        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
     public void testListMenuItems_moveTabsItems_accessibilityOn() {
         mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
 
@@ -2824,6 +1975,415 @@ public class TabContextMenuCoordinatorUnitTest {
                 moveEndTitle);
     }
 
+    // --------------------------------------------------------------//
+    // ------------------ MENU ITEM CALLBACK TESTS ------------------//
+    // --------------------------------------------------------------//
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testAddToNewTabGroup() {
+        mOnItemClickedCallback.onClick(
+                R.id.add_to_new_tab_group,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabModel, times(1)).createSingleTabGroup(mTab1);
+        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testAddToNewTabGroup_multipleTabs() {
+        mOnItemClickedCallback.onClick(
+                R.id.add_to_new_tab_group,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabModel, times(1))
+                .mergeListOfTabsToGroup(
+                        eq(List.of(mTab1, mTab2)),
+                        eq(mTab1),
+                        eq(TabGroupMergeNotificationType.NOTIFY_IF_NOT_NEW_GROUP));
+        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @SuppressWarnings("DirectInvocationOnMock")
+    public void testAddToGroupSubmenu_fallbackTabGroupName() {
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        mSavedTabGroup.title = "";
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, "1 tab", 1, /* isIncognito= */ false);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @SuppressWarnings("DirectInvocationOnMock")
+    public void testAddToGroupSubmenu_fallbackTabGroupName_incognito() {
+        setupWithIncognito(true);
+        initializeCoordinator();
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn("");
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        mSavedTabGroup.title = "";
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1, /* isIncognito= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testSubmenuSelection() {
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+        mTabContextMenuCoordinator.showMenu(
+                new RectProvider(new Rect(0, 0, 100, 100)),
+                new AnchorInfo(TAB_ID, List.of(TAB_ID)));
+
+        // Click into "Add to group" submenu.
+        ListItem addToGroupItem =
+                findItemByTitle(
+                        modelList,
+                        mActivity
+                                .getResources()
+                                .getQuantityString(R.plurals.add_tab_to_group_menu_item, 1));
+        assertNotNull("Add to group item should be present", addToGroupItem);
+        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
+
+        RobolectricUtil.runAllBackgroundAndUi();
+        // Verify that the top item of the submenu is selected.
+        ListView listView =
+                mTabContextMenuCoordinator
+                        .getContentViewForTesting()
+                        .findViewById(R.id.tab_group_action_menu_list);
+        assertEquals(
+                "Expected 1st item to be selected after navigating into submenu",
+                0,
+                listView.getSelectedItemPosition());
+
+        // Click back to parent menu.
+        ListItem headerItem = findItemByType(modelList, SUBMENU_HEADER);
+        assertNotNull("Submenu header should be present", headerItem);
+        headerItem.model.get(CLICK_LISTENER).onClick(mView);
+        RobolectricUtil.runAllBackgroundAndUi();
+
+        // Verify that the top item of the parent menu is selected.
+        assertEquals(
+                "Expected 1st item to be selected after navigating out of submenu",
+                0,
+                listView.getSelectedItemPosition());
+
+        mTabContextMenuCoordinator.destroyMenuForTesting();
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testRemoveFromGroup() {
+        mOnItemClickedCallback.onClick(
+                R.id.remove_from_tab_group,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabUngrouper, times(1)).ungroupTabs(Collections.singletonList(mTab1), true, true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveToNewWindow() {
+        var modelList = new ModelList();
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                TabModel.INVALID_TAB_INDEX,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToNewWindow(
+                modelList,
+                2,
+                mOnItemClickedCallback,
+                new AnchorInfo(TAB_OUTSIDE_OF_GROUP_ID, List.of(TAB_OUTSIDE_OF_GROUP_ID)),
+                COLLABORATION_ID);
+        verify(mMultiInstanceOrchestrator)
+                .moveTabsToOtherWindow(
+                        Collections.singletonList(mTabOutsideOfGroup), NewWindowAppSource.MENU);
+        verify(mMultiInstanceManager).closeChromeWindowIfEmpty(INSTANCE_ID_1);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveToWindow() {
+        MultiWindowUtils.setInstanceCountForTesting(2);
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
+        var modelList = new ModelList();
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                TabModel.INVALID_TAB_INDEX,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+
+        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToWindowRow(
+                modelList, 2, WINDOW_TITLE_2, mView);
+
+        verify(mMultiInstanceOrchestrator)
+                .moveTabsToWindowByIdChecked(
+                        INSTANCE_ID_2,
+                        Collections.singletonList(mTabOutsideOfGroup),
+                        /* destTabIndex= */ TabList.INVALID_TAB_INDEX,
+                        /* destGroupTabId= */ TabList.INVALID_TAB_INDEX,
+                        /* bringToFront= */ true);
+        verify(mMultiInstanceManager).closeChromeWindowIfEmpty(INSTANCE_ID_1);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabLeft() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        String moveLeftTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1);
+        ListItem moveLeftItem = findItemByTitle(modelList, moveLeftTitle);
+        assertNotNull("Move left item should be present", moveLeftItem);
+        moveLeftItem.model.get(CLICK_LISTENER).onClick(mView);
+
+        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabLeft_firstTab() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(0);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertNull(
+                "Did not expect any item to have 'Move left' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabRight() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        String moveRightTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1);
+        ListItem moveRightItem = findItemByTitle(modelList, moveRightTitle);
+        assertNotNull("Move right item should be present", moveRightItem);
+        moveRightItem.model.get(CLICK_LISTENER).onClick(mView);
+
+        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), false);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabRight_lastTab() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(2);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertNull(
+                "Did not expect any item to have 'Move right' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabStart_RTL() {
+        LocalizationUtils.setRtlForTesting(true);
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        String moveRightTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1);
+        ListItem moveRightItem = findItemByTitle(modelList, moveRightTitle);
+        assertNotNull("Move right item should be present", moveRightItem);
+        moveRightItem.model.get(CLICK_LISTENER).onClick(mView);
+        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), false);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabStart_firstTab_RTL() {
+        LocalizationUtils.setRtlForTesting(true);
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(0);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        // In RTL, moving toward the start is "Move right". This option should not be available for
+        // the first tab.
+        assertNull(
+                "Did not expect any item to have 'Move right' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabEnd_RTL() {
+        LocalizationUtils.setRtlForTesting(true);
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        String moveLeftTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1);
+        ListItem moveLeftItem = findItemByTitle(modelList, moveLeftTitle);
+        assertNotNull("Move left item should be present", moveLeftItem);
+        moveLeftItem.model.get(CLICK_LISTENER).onClick(mView);
+
+        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabEnd_lastTab_RTL() {
+        LocalizationUtils.setRtlForTesting(true);
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(2);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        // In RTL, moving toward the end is "Move left". This option should not be available for
+        // the last tab.
+        assertNull(
+                "Did not expect any item to have 'Move left' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabLeft_firstUnpinnedTab() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(1);
+        when(mTabModel.findFirstNonPinnedTabIndex()).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertNull(
+                "Expected no 'Move left' title if tab to the left is pinned",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabRight_pinnedTab() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTab1.getIsPinned()).thenReturn(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(0);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertNull(
+                "Did not expect pinned tab menu to have 'Move left' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1)));
+        assertNull(
+                "Did not expect pinned tab menu to have 'Move right' title",
+                findItemByTitle(
+                        modelList,
+                        mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 1)));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testMoveTabLeft_unpinnedTab() {
+        mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
+        when(mTabModel.indexOf(mTab1)).thenReturn(2);
+        when(mTabModel.findFirstNonPinnedTabIndex()).thenReturn(1);
+        when(mTabModel.getCount()).thenReturn(3);
+
+        ModelList modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        String moveLeftTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 1);
+        ListItem moveLeftItem = findItemByTitle(modelList, moveLeftTitle);
+        assertNotNull("Move left item should be present", moveLeftItem);
+        moveLeftItem.model.get(CLICK_LISTENER).onClick(mView);
+
+        verify(mReorderFunction, times(1)).accept(new AnchorInfo(TAB_ID, List.of(TAB_ID)), true);
+    }
+
     @Test
     @Feature("Tab Strip Context Menu")
     public void testMoveTabsLeft() {
@@ -2836,7 +2396,11 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
 
-        modelList.get(3).model.get(CLICK_LISTENER).onClick(mView);
+        String moveLeftTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_left, 2);
+        ListItem moveLeftItem = findItemByTitle(modelList, moveLeftTitle);
+        assertNotNull("Move left item should be present", moveLeftItem);
+        moveLeftItem.model.get(CLICK_LISTENER).onClick(mView);
 
         verify(mReorderFunction, times(1))
                 .accept(new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)), true);
@@ -2854,10 +2418,151 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
 
-        modelList.get(4).model.get(CLICK_LISTENER).onClick(mView);
+        String moveRightTitle =
+                mActivity.getResources().getQuantityString(R.plurals.move_tabs_right, 2);
+        ListItem moveRightItem = findItemByTitle(modelList, moveRightTitle);
+        assertNotNull("Move right item should be present", moveRightItem);
+        moveRightItem.model.get(CLICK_LISTENER).onClick(mView);
 
         verify(mReorderFunction, times(1))
                 .accept(new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)), false);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testShareUrl() {
+        mOnItemClickedCallback.onClick(
+                R.id.share_tab,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mShareDelegate, times(1)).share(mTab1, false, TAB_STRIP_CONTEXT_MENU);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testDuplicateTab_singleTab() {
+        mOnItemClickedCallback.onClick(
+                R.id.duplicate_tab_menu_id,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+        verify(mTabModel, times(1)).duplicateTab(mTab1);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testDuplicateTabs_multipleTabs() {
+        doReturn(null).when(mTabModel).duplicateTab(any());
+        mOnItemClickedCallback.onClick(
+                R.id.duplicate_tab_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+        verify(mTabModel, times(1)).duplicateTab(mTab1);
+        verify(mTabModel, times(1)).duplicateTab(mTab2);
+    }
+
+    @Test
+    public void testMuteSite_singleTab() {
+        when(mTabModel.isMuted(mTab1)).thenReturn(false);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID)));
+
+        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
+        assertNotNull(muteItem);
+        assertEquals(
+                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 1),
+                muteItem.model.get(TITLE));
+
+        mOnItemClickedCallback.onClick(
+                R.id.mute_site_menu_id, new AnchorInfo(TAB_ID, List.of(TAB_ID)), null, null);
+        verify(mTabModel).setMuteSetting(List.of(mTab1), true);
+    }
+
+    @Test
+    public void testUnmuteSite_singleTab() {
+        when(mTabModel.isMuted(mTab1)).thenReturn(true);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID)));
+
+        ListItem unmuteItem = findItemByMenuId(modelList, R.id.unmute_site_menu_id);
+        assertNotNull(unmuteItem);
+        assertEquals(
+                mActivity.getResources().getQuantityString(R.plurals.unmute_sites_menu_item, 1),
+                unmuteItem.model.get(TITLE));
+
+        mOnItemClickedCallback.onClick(
+                R.id.unmute_site_menu_id, new AnchorInfo(TAB_ID, List.of(TAB_ID)), null, null);
+        verify(mTabModel).setMuteSetting(List.of(mTab1), false);
+    }
+
+    @Test
+    public void testMuteSite_multipleTabs() {
+        when(mTabModel.isMuted(mTab1)).thenReturn(false);
+        when(mTabModel.isMuted(mTab2)).thenReturn(false);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
+
+        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
+        assertNotNull(muteItem);
+        assertEquals(
+                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 2),
+                muteItem.model.get(TITLE));
+
+        mOnItemClickedCallback.onClick(
+                R.id.mute_site_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                null,
+                null);
+        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), true);
+    }
+
+    @Test
+    public void testUnmuteSite_multipleTabs() {
+        when(mTabModel.isMuted(mTab1)).thenReturn(true);
+        when(mTabModel.isMuted(mTab2)).thenReturn(true);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
+
+        ListItem unmuteItem = findItemByMenuId(modelList, R.id.unmute_site_menu_id);
+        assertNotNull(unmuteItem);
+        assertEquals(
+                mActivity.getResources().getQuantityString(R.plurals.unmute_sites_menu_item, 2),
+                unmuteItem.model.get(TITLE));
+
+        mOnItemClickedCallback.onClick(
+                R.id.unmute_site_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                null,
+                null);
+        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), false);
+    }
+
+    @Test
+    public void testMuteSite_multipleTabs_mixedState() {
+        when(mTabModel.isMuted(mTab1)).thenReturn(true);
+        when(mTabModel.isMuted(mTab2)).thenReturn(false);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
+
+        ListItem muteItem = findItemByMenuId(modelList, R.id.mute_site_menu_id);
+        assertNotNull(muteItem);
+        assertEquals(
+                mActivity.getResources().getQuantityString(R.plurals.mute_sites_menu_item, 2),
+                muteItem.model.get(TITLE));
+
+        mOnItemClickedCallback.onClick(
+                R.id.mute_site_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                null,
+                null);
+        verify(mTabModel).setMuteSetting(List.of(mTab1, mTab2), true);
     }
 
     @Test
@@ -2929,12 +2634,45 @@ public class TabContextMenuCoordinatorUnitTest {
     }
 
     @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseTab_nullListViewTouchTracker() {
+        testCloseTab(/* listViewTouchTracker= */ null, /* shouldAllowUndo= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseTab_clickWithTouch() {
+        long downMotionTime = SystemClock.uptimeMillis();
+        FakeListViewTouchTracker listViewTouchTracker = new FakeListViewTouchTracker();
+        listViewTouchTracker.setLastSingleTapUpInfo(
+                MotionEventTestUtils.createTouchMotionInfo(
+                        downMotionTime,
+                        /* eventTime= */ downMotionTime + 50,
+                        MotionEvent.ACTION_UP));
+
+        testCloseTab(listViewTouchTracker, /* shouldAllowUndo= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseTab_clickWithMouse() {
+        long downMotionTime = SystemClock.uptimeMillis();
+        FakeListViewTouchTracker listViewTouchTracker = new FakeListViewTouchTracker();
+        listViewTouchTracker.setLastSingleTapUpInfo(
+                MotionEventTestUtils.createMouseMotionInfo(
+                        downMotionTime,
+                        /* eventTime= */ downMotionTime + 50,
+                        MotionEvent.ACTION_UP));
+
+        testCloseTab(listViewTouchTracker, /* shouldAllowUndo= */ false);
+    }
+
+    @Test
     public void testListMenuItems_closeAllTabs() {
         var modelList = new ModelList();
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 10, modelList.size());
         ListItem closeAllTabsItem = findItemByMenuId(modelList, R.id.close_all_tabs_menu_id);
         assertNotNull(closeAllTabsItem);
         assertEquals(R.string.menu_close_all_tabs, closeAllTabsItem.model.get(TITLE_ID));
@@ -2961,7 +2699,6 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 10, modelList.size());
         ListItem closeAllTabsItem =
                 findItemByMenuId(modelList, R.id.close_all_incognito_tabs_menu_id);
         assertNotNull(closeAllTabsItem);
@@ -2979,5 +2716,321 @@ public class TabContextMenuCoordinatorUnitTest {
                                 .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
                                 .build(),
                         /* allowDialog= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testListMenuItems_singleTab_closeOtherTabs_featureEnabled() {
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        ListItem closeOtherItem = findItemByMenuId(modelList, R.id.close_other_tabs_menu_id);
+        assertNull(closeOtherItem);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseOtherTabs_singleTab() {
+        mTabModel.addTab(
+                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                -1,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_other_tabs_menu_id,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeTabs(List.of(mTab2, mTabOutsideOfGroup))
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
+    })
+    public void testListMenuItems_multipleTabs_closeOtherTabs_featureEnabled() {
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
+
+        ListItem closeOtherItem = findItemByMenuId(modelList, R.id.close_other_tabs_menu_id);
+        assertNull(closeOtherItem);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseOtherTabs_multipleTabs() {
+        mTabModel.addTab(
+                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                -1,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_other_tabs_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeTabs(List.of(mTabOutsideOfGroup))
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.ANDROID_CONTEXT_MENU_NEW_ACTIONS,
+    })
+    public void testListMenuItems_singleTab_closeTabsToTheRight_lastTab() {
+        mTabModel.addTab(
+                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertNull(findItemByMenuId(modelList, R.id.close_tabs_to_the_right_menu_id));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseTabsToTheRight_singleTab() {
+        mTabModel.addTab(
+                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                -1,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_tabs_to_the_right_menu_id,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeTabs(List.of(mTab2, mTabOutsideOfGroup))
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    public void testCloseTabsToTheRight_multipleTabs() {
+        mTabModel.addTab(
+                mTab1, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTab2, -1, TabLaunchType.FROM_CHROME_UI, TabCreationState.LIVE_IN_FOREGROUND);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                -1,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_tabs_to_the_right_menu_id,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                /* collaborationId= */ null,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeTabs(List.of(mTabOutsideOfGroup))
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    // --------------------------------------------------------------//
+    // ----------------------  UTILITY METHODS ----------------------//
+    // --------------------------------------------------------------//
+
+    private void verifyAddToGroupSubmenuForTabOutsideOfGroup(
+            ModelList modelList,
+            String expectedTabGroupName,
+            int expectedTabCount,
+            boolean isIncognito) {
+        int modelListSizeBeforeNav = modelList.size();
+        ListItem addToGroupItem =
+                findItemByTitle(
+                        modelList,
+                        mActivity
+                                .getResources()
+                                .getQuantityString(
+                                        R.plurals.add_tab_to_group_menu_item, expectedTabCount));
+        assertNotNull("Add to group item should be present", addToGroupItem);
+        assertTrue("Expected 'Add to group' item to be enabled", addToGroupItem.model.get(ENABLED));
+        var subMenu = addToGroupItem.model.get(SUBMENU_PROVIDER).get();
+        assertNotNull("Submenu should be present", subMenu);
+        assertEquals(
+                "Submenu should have 2 items, but was " + getDebugString(subMenu),
+                2,
+                subMenu.size());
+        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
+        assertEquals(
+                "Expected 3 items to be displayed, but was " + getDebugString(modelList),
+                3,
+                modelList.size());
+        ListItem headerItem = findItemByType(modelList, SUBMENU_HEADER);
+        assertNotNull("Submenu back header should be present", headerItem);
+        assertEquals(
+                "Expected submenu back header to have the same text as submenu parent item",
+                mActivity
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_group_menu_item, expectedTabCount),
+                headerItem.model.get(TITLE));
+        assertTrue("Expected back header to be enabled", headerItem.model.get(ENABLED));
+        ListItem newGroupItem = findItemByTitleId(modelList, R.string.create_new_group_row_title);
+        assertNotNull("New group item should be present in submenu", newGroupItem);
+        assertEquals(
+                "Expected submenu item for creating a new group to have MENU_ITEM type",
+                MENU_ITEM,
+                newGroupItem.type);
+        assertTrue("Expected New Group item to be enabled", newGroupItem.model.get(ENABLED));
+
+        ListItem tabGroupRowItem = findItemByTitle(modelList, expectedTabGroupName);
+        assertNotNull("Tab group row item should be present in submenu", tabGroupRowItem);
+        assertEquals(
+                "Expected submenu child for existing group to have MENU_ITEM type",
+                MENU_ITEM,
+                tabGroupRowItem.type);
+        PropertyModel tabGroupRowModel = tabGroupRowItem.model;
+        assertEquals(
+                "Expected 3rd submenu child to contain the tab group identifier",
+                expectedTabGroupName,
+                tabGroupRowModel.get(TITLE));
+        assertEquals(
+                "Expected 3rd submenu child to have correct icon width",
+                mActivity
+                        .getResources()
+                        .getDimensionPixelSize(R.dimen.tab_group_nested_menu_color_icon_size),
+                tabGroupRowModel.get(START_ICON_WIDTH));
+        InsetDrawable insetDrawable = (InsetDrawable) tabGroupRowModel.get(START_ICON_DRAWABLE);
+        GradientDrawable drawable = (GradientDrawable) insetDrawable.getDrawable();
+        assertEquals(
+                "Expected circle to have correct color",
+                TabGroupColorPickerUtils.getTabGroupColorPickerItemColor(
+                        mActivity, TAB_GROUP_INDICATOR_COLOR_ID, isIncognito),
+                drawable.getColor().getDefaultColor());
+        assertTrue("Expected tab group row to be enabled", tabGroupRowModel.get(ENABLED));
+        headerItem.model.get(CLICK_LISTENER).onClick(mView);
+        assertEquals(
+                "Expected to navigate back to parent menu",
+                modelListSizeBeforeNav,
+                modelList.size());
+    }
+
+    private void testCloseTab(
+            @Nullable ListViewTouchTracker listViewTouchTracker, boolean shouldAllowUndo) {
+        mOnItemClickedCallback.onClick(
+                R.id.close_tab,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                listViewTouchTracker);
+        verify(mTabRemover, times(1))
+                .closeTabs(
+                        TabClosureParams.closeTabs(Collections.singletonList(mTab1))
+                                .allowUndo(shouldAllowUndo)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    private @Nullable ListItem findItemByMenuId(ModelList modelList, int menuId) {
+        for (int i = 0; i < modelList.size(); i++) {
+            ListItem item = modelList.get(i);
+            if (item.type == MENU_ITEM) {
+                if (item.model.get(ListMenuItemProperties.MENU_ITEM_ID) == menuId) {
+                    return item;
+                }
+            }
+        }
+        return null;
+    }
+
+    private @Nullable ListItem findItemByType(ModelList modelList, int type) {
+        for (int i = 0; i < modelList.size(); i++) {
+            ListItem item = modelList.get(i);
+            if (item.type == type) {
+                return item;
+            }
+        }
+        return null;
+    }
+
+    private @Nullable ListItem findItemByTitle(ModelList modelList, String title) {
+        for (int i = 0; i < modelList.size(); i++) {
+            ListItem item = modelList.get(i);
+            if (item.model.containsKey(ListMenuItemProperties.TITLE)
+                    && title.equals(item.model.get(ListMenuItemProperties.TITLE))) {
+                return item;
+            }
+        }
+        return null;
+    }
+
+    private @Nullable ListItem findItemByTitleId(ModelList modelList, @StringRes int titleId) {
+        for (int i = 0; i < modelList.size(); i++) {
+            ListItem item = modelList.get(i);
+            if (item.model.containsKey(ListMenuItemProperties.TITLE_ID)
+                    && item.model.get(ListMenuItemProperties.TITLE_ID) == titleId) {
+                return item;
+            }
+        }
+        return null;
+    }
+
+    private static String getDebugString(ModelList modelList) {
+        StringBuilder modelListContents = new StringBuilder();
+        for (int i = 0; i < modelList.size(); i++) {
+            modelListContents.append(modelList.get(i).type);
+            modelListContents.append(" ");
+            modelListContents.append(
+                    PropertyModel.getFromModelOrDefault(modelList.get(i).model, TITLE, null));
+            if (i < modelList.size() - 1) modelListContents.append(", ");
+        }
+        return modelListContents.toString();
+    }
+
+    private static String getDebugString(List<ListItem> items) {
+        StringBuilder modelListContents = new StringBuilder();
+        for (int i = 0; i < items.size(); i++) {
+            modelListContents.append(items.get(i).type);
+            modelListContents.append(" ");
+            modelListContents.append(
+                    PropertyModel.getFromModelOrDefault(items.get(i).model, TITLE, null));
+            if (i < items.size() - 1) modelListContents.append(", ");
+        }
+        return modelListContents.toString();
     }
 }
